--- a/笔记/(10)第十章-枚举和注解.md
+++ b/笔记/(10)第十章-枚举和注解.md
@@ -81,7 +81,7 @@
 >             System.out.println(season);
 >         }
 >         Season2 autumn2 = Season2.valueOf("AUTUMN");
->         //4.values 将字符串转换成枚举对象 要求字符串必须和已有的枚举常量名相同 否则报异常
+>         //4.valueOf 将字符串转换成枚举对象 要求字符串必须和已有的枚举常量名相同 否则报异常
 >         //valueOf 是Enum类中的一个静态方法 根据输入的字符串 根据对象名去到枚举类中查找到对应的枚举对象
 >         //然后返回该枚举对象的地址 若输入的对象名有误 则程序报错
 >         System.out.println(Season2.AUTUMN.compareTo(Season2.SUMMER));
@@ -98,7 +98,7 @@
 
 > 1. 注解也称为元数据 用于修饰解释 包 类 方法 属性 构造器 局部变量等数据信息 修饰注解的注解称为**元注解**
 >
-> 2. 和注释一样 注解不影响程序逻辑 找那注解可以被编译或运行 相当于在代码中嵌入的补充信息
+> 2. 和注释一样 注解不影响程序逻辑 只是注解可以被编译或运行 相当于在代码中嵌入的补充信息
 >
 > 3. 使用Annotation 修饰符代表注解 并在前面加上@符号 并把Annotation 当做修饰符使用  用于修饰它支持的程序元素
 >
