--- a/笔记/(11)第十一章-异常.md
+++ b/笔记/(11)第十一章-异常.md
@@ -57,8 +57,6 @@
 
 *  常见的编译异常
 
-  >
-  >
   >SQLException 操作数据库时  查询表可能发生异常
   >
   >IOException 操作文件时 发生的异常
@@ -70,7 +68,7 @@
   >EOFException 操作文件 到文件末尾 发生异常
   >
   >IllegalArguementException 参数异常
-
+  
 * 编译异常的处理方法
 
 > 1. try-catch-finally
@@ -94,7 +92,7 @@
 > 2. 如果异常没有发生 则直接隔过catch代码块
 > 3. 如果希望不管是否有异常 都希望某段代码 则使用finally
 > 4. 可以有多个catch语句 捕获不同的异常 （进行不同的业务处理） 要求父类异常在后面 子类异常在前面 （找到第一个异常 然后匹配try后的catch 然后接着执行代码  直到所有的catch接收到异常 ？)
-> 5. 可以进行 try-finally配合使用 这种用法相当于没有捕获异常 因此程序会直接崩掉 应用场景 不管是否发生异常 都必须执行某个业务逻
+> 5. 可以进行 try-finally配合使用 这种用法相当于没有捕获异常 因此程序会直接崩掉 应用场景 不管是否发生异常 都必须执行某个业务逻辑
 > 6. finally必须执行 若catch中也有return语句 则最后的返回结果是finally中的 如果catch中有return语句 则先不返回 执行完finally后再返回
 
 * throws  处理异常细节
@@ -122,5 +120,5 @@
 
 * throw 和 throws 的区别
 
-  > 1. throw 一般用于方法体中 手动生成异常对象的关键字  throw + 异常对象
-  > 2. throws 一般用于方法声明处  是处理异常的一种方式 throws  +  异常类型
+  > 1. throw 一般用于方法体中 手动生成异常对象的关键字  throw + 异常对象 通常用在catch中 throw应该是直接抛给jvm机处理 所以catch后throw抛出后方法的调用者不用处理异常
+  > 2. throws 一般用于方法声明处  是处理异常的一种方式 throws  +  异常类型 通常抛给调用者 调用者需要处理 根据是抛出还是捕获来决定如何传递给jvm机
