--- a/笔记/(14)第十四章-泛型.md
+++ b/笔记/(14)第十四章-泛型.md
@@ -16,7 +16,7 @@
 
 * 泛型的细节
 
-  > 1. 泛型 T V K 等指定数据类型时必须是引用类型不能是引用类型
+  > 1. 泛型 T V K 等指定数据类型时必须是引用类型不能是基本数据类型
   > 2. 在给泛型指定数据类型时 数据可以传入其子类类型 本质是向上转型
   > 3. 如HashMap<String, Student> hashmap = new HashMap<>(); 可以减写后面的<>的内容（编译器自动识别）
   > 4. 若在类中定义泛型后 创建对象不指定泛型时 默认泛型为Object 
@@ -32,7 +32,8 @@
   > 7. 泛型的标识符一般为单个的大写字母 泛型的表示符可以有多个
   > 8. 接口中静态成员也不能使用泛型
   > 9. 接口泛型的类型在继承接口或者实现接口时实现
-  > 10. 没有指定类型默认为Object
+  > 10. 类的泛型类型同样可以在子类中指定实现
+  > 11. 没有指定类型默认为Object
   
 * 自定义泛型方法
 
