--- a/笔记/(17)第十七章-IO流.md
+++ b/笔记/(17)第十七章-IO流.md
@@ -155,7 +155,7 @@
   >
   > 客户  -----------快递小哥(输出  出手)-------->物流中心
 
-### 文件操作常用类
+#### 文件操作常用类
 
 * Inputstream子类基本类图
 
@@ -336,4 +336,349 @@
       fileReader.close();
   }
   ```
+
+#### 结点流和处理流
+
+* 基本介绍
+  1. 节点流   ----------  是对特定的数据源来进行读写数据操作 比如用FileReader/FileInputStream 创建对象(创建相应的流？？)来操作文件 底层操作 较低级
+  2. 处理流(包装流)  ----------   对结点流进行包装 如BufferedReader 其中可以封装一个节点流 只要是Reader的子类都可包装进去 由此功能更强 可处理较多种类的数据源 （文件 管道  数组等数据源）  较高级也更加灵活  包装流采用了修饰器模式
+* 区别和联系
+  1. 结点流是底层流/低级流， 直接和数据源相连接
+  2. 处理流（包装流） 包装结点流 ，既可以消除不同结点流的实现差异 也可以提供更方便的方法来完成输入输出
+  3. 处理流也叫包装流，使用了修饰器设计模式，不会直接与数据源相连接
+  4. 修饰器设计模式的基本思想：
+     1. 现有抽象类Reader 类FileInputStream 和 StringinputStream 是两个不同的结点流继承了抽象类Reader 他们可以分别实现对不同数据源的处理  先有BufferReader类 （修饰器设计模式） 其继承了Reader抽象类 可以使用Reader类中可以处理不同数据源的抽象方法  Buffer类中定义了结点流Reader 可以接收任何Reader类的实现子类 也就是不同的可以操作不同数据源的类的对象 BufferReader可以根据传入的结点流对象调用可以处理相应数据源的方法(这里利用了java中的动态绑定机制) 并在此基础上可以封装 实现更强大的处理多种数据源的能力 这其中的方法就是修饰器设计模式的基本思想
+
+#### 字符处理流常用类
+
+* BufferedReader
+
+  方法有 
+
+  1. readLine()读一行 不包含换行符
+
+  ```java
+  public static void main(String[] args) throws IOException {
+      String filePath = "text.txt";
+      BufferedReader bufferedReader = new BufferedReader(new FileReader(filePath));
+      //传入结点流 在内部处理
+      String buf;
+      while((buf = bufferedReader.readLine())!=null) { //.readLine() 一次读取一行
+          System.out.println(buf);
+      }
+      bufferedReader.close();//关闭外部流 自动调用传入的结点流
+  }
+  ```
+
+* BufferedWriter
+
+  方法有
+
+  1. writer（字符）
+  2. newLine() 写入一个和系统相关的换行符
+  3. writer（字符串，起始，结束）
+
+  ```java
+  public static void main(String[] args) throws IOException {
+      String filePath = "text.txt";
+      BufferedWriter bufferedWriter = new BufferedWriter(new FileWriter(filePath,true));
+      //可以在结点流上加上true 表示追加
+      bufferedWriter.write("你好 你好 你好 你好 你好"); //写入字符串
+      bufferedWriter.write('\n'); //写入字符
+      bufferedWriter.write("你好");
+      bufferedWriter.newLine();//插入一个和系统相关的换行符
+      bufferedWriter.write("你好");
+      bufferedWriter.close();
+  }
+  ```
+
+* 文件的拷贝
+
+  ```java
+  public static void main(String[] args) throws IOException {
+      BufferedReader bufferedReader = new BufferedReader(new FileReader("text.txt"));
+      BufferedWriter bufferedWriter = new BufferedWriter(new FileWriter("test.txt"));
+      String s;
+      while( (s=bufferedReader.readLine()) != null) {
+          //读取的一行字符串不包含换行符
+          bufferedWriter.write(s);
+          bufferedWriter.newLine();
+      }
+      bufferedReader.close();
+      bufferedWriter.close();
+  }
+  ```
+
+注意： BufferedReader BufferedWriter是来处理字符文件 不要处理二进制文件 如 图片 视频 声音 等 不然会可能会导致文件错误
+
+#### 字节处理流常用类
+
+* BufferedInputStream类
+
+* BufferedOutputStream类
+
+  ```java
+  public static void main(String[] args) throws IOException {
+      BufferedInputStream bufferedInputStream = new BufferedInputStream(new FileInputStream("heita.png"));
+      BufferedOutputStream bufferedOutputStream = new BufferedOutputStream(new FileOutputStream("heita1.png"));
+      byte[] bytes = new byte[8];
+      int read;
+      while ((read=bufferedInputStream.read(bytes))!=-1) {
+          bufferedOutputStream.write(bytes,0,read);
+      }
+      bufferedInputStream.close();
+      bufferedOutputStream.close();
+  }
+  ```
+
+#### 对象处理流类
+
+* 序列化和反序列化
+  1. 序列化就是将一个对象的值和数据类型拷贝到文件中
+  2. 反序列化就是将文件中保存的对象(值 和 数据类型)取出来 恢复成对象
+  3. 实现Seriable接口 或 Externalizable 接口的类创建的对象才能实现序列化
+  4. 一般选择Serializble接口 因为它是一个标签接口 没有方法
+
+* ObjectOutputStream 类 （处理流） 提供序列化功能
+
+  ```java
+  public class ObjectOutputStream01 {
+      static class Dog implements Serializable {
+          String name = "wang";
+          int age = 10;
+  
+          public Dog(String name, int age) {
+              this.name = name;
+              this.age = age;
+          }
+  
+          @Override
+          public String toString() {
+              return "Dog{" +
+                      "name='" + name + '\'' +
+                      ", age=" + age +
+                      '}';
+          }
+      }
+      public static void main(String[] args) throws IOException {
+          ObjectOutputStream objectOutputStream = new ObjectOutputStream(new FileOutputStream("test.dat"));
+  
+          //.dat 文件是保存序列化 的对象的文件类型
+          objectOutputStream.writeInt(100);//100自动装箱成Integer
+          objectOutputStream.writeBoolean(true);
+          objectOutputStream.writeChar('a');
+          objectOutputStream.writeUTF("哈哈哈哈哈");
+          objectOutputStream.writeObject(new Dog("wang",2));
+          objectOutputStream.close();//关闭处理流
+      }
+  }
+  ```
+
+* ObjectInputStream类   (处理流)   提供反序列化功能
+
+  ```java
+  public class ObjectInputStream01 {
+      public static void main(String[] args) throws IOException, ClassNotFoundException {
+          ObjectInputStream objectInputStream = new ObjectInputStream(new FileInputStream("test.dat"));
+          //下面进行反序列化
+          //反序列化时得到的对象顺序应和序列化时保持一致
+          System.out.println(objectInputStream.readInt());
+          System.out.println(objectInputStream.readBoolean());
+          System.out.println(objectInputStream.readChar());
+          System.out.println(objectInputStream.readUTF());
+          Object o = objectInputStream.readObject(); //需要抛出类型转换异常
+          ObjectOutputStream01.Dog dog = (ObjectOutputStream01.Dog) o; //向下转型
+          //反序列化得到的Dog 是序列化时的Dog 如果有一点信息(类中方法属性 类的所在包等)
+          // 不一样 就会出现错误
+          System.out.println(dog);
+          objectInputStream.close();
+  
+      }
+  }
+  ```
+
+* 对象处理流相关细节
+  1. 读写顺序应一致
+  2. 序列化或反序列化的对象的类要实现Serializable接口
+  3. 序列化的对象的类建议添加SerialIversionID 为了提高版本的兼容性
+  4. 序列化对象时 默认将里面所有属性都序列化 但除了static 和 transient修饰的成员 （transient 瞬时的 代表不可被序列化） 若属性有相关信息 并不能存入.dat 文件 读取时为空null  
+  5. 属性是序列化才能被序列化 序列化对象时 要求里面属性类型也要能实现序列化 不然报错  如有创建了另一个没有序列化对象的属性
+  6. 序列化具有可继承性 父类实现了Seriallver接口 可序列化 则其子类也可序列化
+
+#### 标准输入和标准输出流
+
+* 基本介绍
+
+  1. System.in 标准输入流  类型 （编译类型）InputStream  (运行类型) BufferedInputStream  -- 字节流 + 处理流
+
+     建立键盘和内存之间的联系
+
+     ```java
+     Scanner scanner = new Scanner(System.in);
+     //这里的System.in 是指一个输入流 是将输入流传入Scanner对象 注意 in是输入流对象
+     //是System类中的一个静态属性 其编译类型为InputSteam 运行类型是BufferedInputStream
+     String next = scanner.next();
+     ```
+
+  2. System.out 标准输出流  （编译类型和运行类型）PrintSttream
+
+     建立内存与屏幕之间的联系  
+
+     ```java
+     System.out.println("你好");
+     //System.out 是一个输出流 这里是将"你好"通过输出流中的printf方法输出到屏幕上 注意 out是
+     //输出流对象 是System类中的一个静态属性 其编译类型和运行类型都是PrintStream
+     ```
+
+#### 转换流
+
+* InputStreamReader类
+
+  1. 是Reader的子类
+
+  2. 将字节流转换成字符流 并指定编码 防止使用普通字节流输入时因为默认编码而乱码 只有从字节流(二进制形式）转换成字符流  才能指定编码 所以说转换流有着重要的意义
+
+  3. 将InputStream字节流转换成Reader字符流 
+
+     ```java
+     public class InputStreamReader01 {
+         public static void main(String[] args) throws IOException {
+             InputStreamReader inputStreamReader =
+                     new InputStreamReader(new FileInputStream("text.txt"),"gbk");
+             //将字节流转换成字符流 并且指定编码 InputStreamReader 该字符流是Reader的子类 可用BufferedReader
+             BufferedReader bufferedReader = new BufferedReader(inputStreamReader);
+             String s;
+             while((s = bufferedReader.readLine()) != null) {
+                 System.out.println(s);
+             }
+             bufferedReader.close();
+         }
+     }
+     ```
+
+* OutputSteamWriter类
+
+  1. 是Writer的子类
+
+  2. 将字节流转换成字符流 并指定编码 防止使用普通字节流输出时因为默认编码而乱码
+
+  3. 将OutputStream字节流转换成Writer字符流
+
+     ```java
+     public class OutputStreamWriter01 {
+         public static void main(String[] args) throws IOException {
+             BufferedWriter bufferedWriter = new BufferedWriter(
+                     new OutputStreamWriter(new FileOutputStream("text.txt", true),"gbk"));
+             bufferedWriter.newLine();
+             bufferedWriter.write("hi hi hi 想我了吗");
+             bufferedWriter.close();
+         }
+     }
+     ```
+
+#### 打印流
+
+打印流只有输出流 没有输入流 因为打印流就是把内存中的东西打印到目的位置
+
+* PrintStream （字节打印流）
+
+  <img src="D:\VS项目\Java入门\笔记\img\cbe834b9d893297b98932fd95fd0770.jpg" alt="cbe834b9d893297b98932fd95fd0770" style="zoom:50%;" />
+
+  ```java
+  public class PrintStream01 {
+      public static void main(String[] args) throws IOException {
+          PrintStream out = System.out; //这里静态属性 默认PrintStream字节打印流 中 的打印位置为屏幕
+          out.println("hello"); //底层使用是write方法 打印到屏幕
+          out.write("hi ha".getBytes()); //直接使用write方法传入字节数组 打印到屏幕
+          System.setOut(new PrintStream("test.txt"));//
+          //也可以调用System类中的静态方法setOut 重新设置静态属性PrintStream字节打印流
+          // 从而设置其的打印位置
+          System.out.println("你好呀");
+          out.close();
+          //上面代码本质上和下面一样 也是创建对象后调用 只不过是通过方法创建一个新的对象赋给System类中的out
+          //再对该对象进行使用 (方法调用)
+          PrintStream printStream = new PrintStream("test.txt"); //创建对象时可以指定输输出的位置 可以是文件 屏幕等
+          printStream.println("你好啊");
+          printStream.close();
+      }
+  }
+  ```
+
+* PrintWriter (字符打印流)
+
+  <img src="D:\VS项目\Java入门\笔记\img\dcfe4b357c87ebfbfd1a9115288d418.jpg" alt="dcfe4b357c87ebfbfd1a9115288d418" style="zoom:50%;" />
+
+  ```java
+  public class PrintWriter01 {
+      public static void main(String[] args) throws IOException {
+          PrintWriter printWriter = new PrintWriter(System.out);
+          //套娃 printStream 转换成BufferedWriter 再转换成 PrintWriter 最终调用Writer类写入到目的位置
+          //构造器将该out PrintStream 字节流 转换成 Writer字符流使用
+          printWriter.print("你好");
+          printWriter.close();
+          PrintWriter test = new PrintWriter(new FileWriter("test.txt"));
+          //根据构造器 传入一个文件字符流 打印到文件中去
+          test.print("jjjjjj");
+          test.close(); //不关闭流不会写入数据
+      }
+  }
+  ```
+
+#### Properties类
+
+作用：用来读配置文件中的信息 效率较高
+
+* Properties类常见方法
+
+  1. load：加载配置文件的键值对到Properties对象
+  2. list：将数据显示到指定设备
+  3. getProperties(key) 根据键获取值
+  4. setProperties（key，value） 设置键键值对到Properties对象 若有则覆盖
+  5. store：将Properties中的键值对存储到配置文件，在ideal中保存信息到配置文件 若果对象中键值对含有中文 则会存储为Unicode码
+
+* Properties配置文件的读取
+
+  > ```java
+  > public class Properties01 {
+  >     //Properties对象的读取配置文件
+  >     public static void main(String[] args) throws IOException {
+  >         Properties properties = new Properties();//创建对象
+  >         properties.load(new FileReader("mysql.properties"));//传入结点流
+  >         //将文件信息加载到对象中
+  >         properties.list(System.out);//list 方法接收的是一个打印流
+  > //        这里将 out 标准输出流 PrintStream （为OutputStream子类）传入 转换成PrintWriter类  ***************
+  > //        list方法将 properties对象读取到的配置文件键值对输出到对应的输出位置  *****************
+  >         //这里传入标准输出流 out （屏幕）
+  >         String user = properties.getProperty("user"); //根据键获取值
+  >         String password = properties.getProperty("password");
+  >         System.out.println("user" + user + "password" + password);
+  >     }
+  > }
+  > ```
+
+* Properties配置文件的修改
+
+  >```java
+  >public class Properties20 {
+  >    public static void main(String[] args) throws IOException {
+  >        //Properties对象的存储写入和修改
+  >        //存储
+  >        Properties properties = new Properties();
+  >        //创建对象
+  >        properties.setProperty("user", "王五");
+  >        properties.setProperty("id", "1231231");
+  >        properties.setProperty("password", "1231231");
+  >        //写入键值对
+  >        properties.store(new FileWriter("test.properties"),null); //null指注释
+  >        System.out.println("存储成功");
+  >        //修改
+  >        Properties properties1 = new Properties();
+  >        properties1.load(new FileReader("test.properties"));
+  >        properties1.setProperty("user","张三");//修改
+  >        properties1.setProperty("information","wowowowo");
+  >        properties1.list(System.out);//输出
+  >        properties1.store(new FileWriter("test.properties"),"注释");
+  >    }
+  >}
+  >```
 
