--- a/笔记/(8)第八章-面向对象编程(中级).md
+++ b/笔记/(8)第八章-面向对象编程(中级).md
@@ -191,6 +191,8 @@
 >
 >    也就是会不断追溯到到那顶级父类 先将依次将父类进行初始化
 >
+>    （java 中定义一个类若果没有显式定义父类 没有继承一个父类 那么这个类默认继承object类)
+>
 > 9. 子类只能继承一个父类(指直接继) java中是单继承机制 
 >
 > 10. 不能滥用继承 继承必须合理
