--- a/笔记/(9)第九章-面向对象编程(高级).md
+++ b/笔记/(9)第九章-面向对象编程(高级).md
@@ -229,13 +229,13 @@
 * 细节
 
 > 1. final修饰的属性一般又叫做常量 一般用XXX_XX大写字母+ _来命名
-> 2. final修饰的常量必须赋初值 并且以后无法修改 赋值可以在定义时 构造器 代码块
-> 3. final修饰的常量如果是静态的 定义时必须在 定义时 或 静态代码块 不可在构造器中 
+> 2. final修饰的(非静态)常量必须赋初值 并且以后无法修改 赋值可以在定义时 构造器 普通代码块
+> 3. final修饰的常量如果是静态的 赋值时必须在 定义时 或 静态代码块中 不可在构造器中 
 > 4. final类不可以继承 但可以实例化对象的
 > 5. 如果不是final类但是含有final方法 继承的子类是可以使用父类final方法的
 > 6. 一般来说 如果类定义成final类 就不必要使用final修饰方法了
 > 7. final不可修饰构造方法
-> 8. final和static往往搭配使用 效率更高 共同修饰属性时产生额外效果 调用该静态属性 不会导致类加载 （编译器底层做了优化处理）
+> 8. final和static往往搭配使用 效率更高 共同修饰属性时产生额外效果 调用该静态属性 不会导致类加载 （编译器底层做了优化处理） （如果final static 修饰的常量在静态代码块中初始化 会执行静态代码块，是不是类加载不知道）
 > 9. Integer  Double  Float Boolean String 等包装类都是final类 不可被继承
 
 ### 抽象类  
@@ -562,7 +562,7 @@
 >                 System.out.println("用匿名内部类直接作为参数");
 >             }
 >         });
->         //这里本质上也是创建了一个类IB$1 实现了该接口 重写了该方法 然后返回一个该类的对象
+>         //这里本质上也是创建了一个类Test$1 实现了该接口 重写了该方法 然后返回一个该类的对象
 >         //调用传入调用方法时动态绑定该对象的重写的方法 实现多态
 >     }
 >     public static void printf(IB ib) { //用接口接收 实现多态 一般情况要先实现接口类 类比用父类接收要创建子类
