--- a/笔记/(12)第十二章-常用类.md
+++ b/笔记/(12)第十二章-常用类.md
@@ -61,7 +61,7 @@
   >
   > 若不在数字范围 则返回的是新不同的对象
   >
-  > 2. Integer i = 127; int j = 127;  System.out.printf( i == j ) //相等 有基本数据类型就判断值相等
+  > 2. Integer i = 127; int j = 127;  System.out.printf( i == j ) //相等   ==  判断是同一个对象地址相同  equals方法在包装类中和String类中判断值相等
 
 * 包装类与String类的相互转换
 
@@ -96,7 +96,7 @@
   >Integer.MAX_VALUE; //最小值
   >Character.isDigit();  //是否为数字
   >Character.isLetter();  //是否是小写字母
-  >Character.isUpperCase();  //是否为答谢字母 
+  >Character.isUpperCase();  //是否为大写字母 
   >Character.isLowerCase();  //是否为小写字母
   >Character.isWhitespace(); //是否为空格
   >Character.toUpperCase();  //转成大写
@@ -119,7 +119,7 @@
   >
   >2. 字符串的字符用Unicode编码 一个字符（不区分英文还是中文）都占两个字节  （新版有变
   >
-  >   英文字符占一个字节 中文字符占一个字节）
+  >   英文字符占一个字节 中文字符占三个字节？）
   >
   >3. String类中有很多构造器 下面为其常用构造器
   >
@@ -235,9 +235,30 @@
 >
 > 13. compareTo()   对两个字符进行比较第一个小于第一个 返回负数 大于返回正数 等于返回0
 >
->     （字符串长度不同 但前面内容相同 返回字符串长度的差值 ）
+>     （先按字符比较两个字符串，若有不同返回第一个字符串中字符减去第二个字符串中字符的值，不然到最后返回字符串长度的差值 ）
+>
+>     ```java
+>     public int compareTo(String anotherString) {
+>         int len1 = value.length;
+>         int len2 = anotherString.value.length;
+>         int lim = Math.min(len1, len2);
+>         char v1[] = value;
+>         char v2[] = anotherString.value;
 >     
-> 14. farmat()  将字符串格式化转换 返回字符串对象
+>         int k = 0;
+>         while (k < lim) {
+>             char c1 = v1[k];
+>             char c2 = v2[k];
+>             if (c1 != c2) {
+>                 return c1 - c2;
+>             }
+>             k++;
+>         }
+>         return len1 - len2;
+>     }
+>     ```
+>
+> 14. farmat()  将格式化形式的字符串转换成转换成字符串对象并返回
 
 ### StringBuffer类
 
@@ -249,7 +270,7 @@
 >
 > 3. StringBuffer是一个容器
 >
-> 4. 在父类AbstractStringBUilder中 有属性 char[] value 不是final该value数组存放了字符串内容
+> 4. 在父类AbstractStringBuilder中 有属性 char[] value 不是final该value数组存放了字符串内容
 >
 >    所以该数组数据存放在堆中 不是常量池
 >
@@ -279,7 +300,7 @@
   >//通过字符串创建  创建第一个大小为Str.length + 16 (21) 的char[] 数组 用于存放"hello" 和后续可添加的其他字符
   >```
 
-* StringBUffer和String对象的相互转换方法
+* StringBuffer和String对象的相互转换方法
 
 > String 转换成 StringBuffer
 >
@@ -359,14 +380,14 @@
   >6. StringBuilder 对象中存放的字符序列仍在其父类  ABstractStringBuilder 的char[]  value 数组中  因此字符序列在堆中
   >7. StringBuilder的方法 没有做互斥的处理  即没有synchronized关键字 推荐在单线程的情况下使用StringBuilder
 
-* String  StringButter  StringBuilder 的区别
+* String  StringBuffer  StringBuilder 的区别
 
 > 1. StringButter 与 StringBuilder很相似 均代表可变的字符序列 而且方法也一样
 > 2. String:  不可变的字符序列 修改效率低 但复用率最高
 > 3. StringBuffer: 可变字符序列 效率较高 (增删) 线程安全
 > 4. StringBuilder： 可变字符序列 效率最高 线程不安全
 > 5. String 使用时如果遇到多次对字符串进行修改 拼接  会在方法区的常量池不断开辟新的空间 创建新的字符串常量 导致大量的字符串对象存放在内存中 如果进行多次循环 会极大的影响程序的性能 --> 结论： 如果我们对String做大量修改 不要使用String
-> 6. 对字符串操作的效率 StringBuilder > StringButter > String
+> 6. 对字符串操作的效率 StringBuilder > StringBuffer > String
 
 * 字符串使用原则
 
@@ -445,7 +466,7 @@
 >
 >```java
 >//3. binarySearch 方法
->//对有序数组进行查找 存在返回下标 不存在返回应该存在的位置 + 1
+>//对有序数组进行查找 存在返回下标 不存在返回   -(应该存在的位置 + 1)   为负数
 >int[] arr = {1,2,3,4,5,6};
 >int index = Arrays.binarySearch(arr,3);
 >System.out.println(index); // 2 
